# octopush

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: lib.rs  main.rs  test_helpers.rs
src/core/: app.rs  auth.rs  profile.rs  project.rs
src/util/: cli.rs  git.rs  output.rs  path_completer.rs  system.rs
tests/: profile_integration.rs
