[package]
name = "octopush"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
console = "0.16.1"
dialoguer = "0.12.0"
indicatif = "0.18.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"

[dev-dependencies]
nix = "0.30.1"
